# remoteled

./: .dockerignore  .env  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.react  Dockerfile.iot  Dockerfile.web  Makefile  QUICKSTART.md  README.md  README_DEMO.md  SETUP.md  TESTING.md  TESTING_SUMMARY.md  TEST_REPORT.md  backend.py  ble_client.py  boot from usb.txt  demo_order_flow.sh  docker-compose.admin.yml  docker-compose.yml  led  mosquitto.conf  pyproject.toml  rebuild_android_app.sh  start_all.sh  start_pi.sh  start_server_macos.sh  test_frontend_crud.sh
.github/workflows/: android.yml
android/RemoteLedBLE/: settings.gradle.kts
android/RemoteLedBLE/app/: build.gradle.kts
android/RemoteLedBLE/gradle/: libs.versions.toml
backend/: .env  Dockerfile  README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  auth.py  authorizations.py  device_models.py  devices.py  led.py  locations.py  orders.py  payments.py  reference.py  service_types.py  telemetry.py
backend/app/core/: admin_logger.py  auth.py  config.py  database.py  led_handler.py  payment_handler.py  validators.py
backend/app/models/: schemas.py
backend/tests/: test_admin_crud.py
database/: README.md  init.sql  migrate_add_auth.sql  migrate_service_model.sql  schema.sql  seed.sql
docs/: ARCHITECTURE.md
docs/linear/: linear-import-getting-started.md
frontend/admin/: admin_console.html  admin_console_mockup.html
frontend/admin-react/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/docs/: ADMIN_CONSOLE_ARCHITECTURE.md  ADMIN_CONSOLE_README.md  QUICKSTART_ADMIN.md  WHATS_NEW.md
pi/: install.sh  kiosk.sh
pi/kiosk/: README.md  SETUP.md  package-lock.json  package.json  start.sh
pi/node/: main.js  package-lock.json  package.json  remoteled-node.service  start.sh
pi/python/: .env  ble_client.py  code.py  led_controller.py  led_service.py  remoteled-python.service  run.sh  start.sh
pi/web/: index.html
tests/: README.md  setup_test_db.sh  test_auth_api.sh  test_crud_with_auth.sh
(+166 files in other folders)
